--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -28,6 +28,7 @@ layout: compress
                     <ul>
                         <li class="wow fadeInLeft" data-wow-duration="1.5s">
                             <a class="zoombtn" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
+                             <p>{{ post.description }}</p>
                            
                         </li>
                     </ul>
